[project]
name = "yasss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luca Braglia", email = "lbraglia@gmail.com" }
]
requires-python = ">=3.13.5"
dependencies = []

[project.scripts]
yasss = "yasss:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.pytest]
addopts = ["--doctest-modules"]
